move cec model power calc to appendix, start on new tutorial 4

--- a/Appendix-0.ipynb
+++ b/Appendix-0.ipynb
@@ -4,33 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 4 - PV Module Performance\n",
+    "# Tutorial 4 - Array Power\n",
     "\n",
-    "Now that we know how to obtain the plane of array (POA) irradiance and cell temperature, let's calculate a module's performance assuming a subset of irradiance and temperature conditions. The objectives for this tutorial are to use pvlib python to do the following:\n",
-    "\n",
-    "1. Retrieve a set of module CEC parameters from the latest SAM library.\n",
-    "2. Calculate the single diode parameters for a set of PV module test conditions known as IEC61853.\n",
-    "3. Produce an IV curve for each of the IEC61853 test conditions.\n",
-    "4. Derive the CEC model parameters based on Isc, Voc, Imp, and Vmp CEC measurements.\n",
-    "\n",
-    "## STC\n",
-    "The most basic condition is called standard testing conditions or STC, which is considered the reference for most PV modules. For example, all of the PV modules in the SAM CEC module database list their nameplate power at STC.\n",
-    "* irradiance: 1000-W/m&sup2;\n",
-    "* cell temperature: 25&deg;C\n",
-    "* angle of incidence (AOI): 90&deg;\n",
-    "* sepctrum: AM1.5g (ASTM G-173)\n",
-    "\n",
-    "### Air mass (AM)\n",
-    "The standard refernce AM1.5g (ASTM G-173) is defined as the solar spectrum of global irradiance that passes through 1.5 atmospheres. For more information see [NREL Solar Spectra](https://www.nrel.gov/grid/solar-resource/spectra.html).\n",
-    "\n",
-    "## IEC 61853 test conditions\n",
-    "Another common set of test conditions is the IEC 61853 standard which provides a grid of temperatures for module testing that covers the expected range of inicident irradiance and cell temperatures for PV modules assuming that the irradiance is normal and the solar spectrum is similar to AM1.5g.\n",
-    "* irradiance (W/m&sup2;): 100, 200, 400, 600, 800, 1000, 1100\n",
-    "* module temperature (&deg;C): 15, 25, 50, 75\n",
-    "* angle of incidence =: 90&deg;\n",
-    "* spectrum: AM1.5g (ASTM G-173)\n",
-    "\n",
-    "Certain combinations are excluded because they're unlikely: (1100-W/m&sup2, 15&deg;C), (400-W/m&sup2, 75&deg;C), (200-W/m&sup2, 50&deg;C), (200-W/m&sup2, 75&deg;C), , (100-W/m&sup2, 50&deg;C), and (100-W/m&sup2, 75&deg;C)"
+    "Let's put together what we know of modeling POA irradiance and cell temperature and calculate a module's performance.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pvlib and other useful python packages\n",
+    "import pvlib\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a \"typical meteorological year\" or TMY is made of individual months\n",
+    "# cherry picked from several years, but to run a simulation we need\n",
+    "# to calculate solar positions for an actual year. EG: PVsyst defaults\n",
+    "# to 1990\n",
+    "YEAR = 1990\n",
+    "STARTDATE = '%d-01-01T00:00:00' % YEAR\n",
+    "ENDDATE = '%d-12-31T23:59:59' % YEAR\n",
+    "TIMES = pd.date_range(start=STARTDATE, end=ENDDATE, freq='H')"
    ]
   },
   {
@@ -39,170 +43,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pvlib and other useful python packages\n",
-    "import pvlib\n",
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set STC reference conditions\n",
-    "E0 = 1000  # W/m^2\n",
-    "T0 = 25  # degC\n",
-    "\n",
-    "# set the IEC61853 test matrix\n",
-    "T_IEC61853 = [15, 25, 50, 75]\n",
-    "E_IEC61853 = [100, 200, 400, 600, 800, 1000, 1100]\n",
-    "IEC61852 = np.meshgrid(T_IEC61853, E_IEC61853)"
-   ]
-  },
-  {
-   "source": [
-    "# Single Diode Model (SDM) & IV Curve\n",
-    "PV module performance can be modeled using point or continuous IV-curve models. Point models like PVWatts and The Sandia Array Performance Model (SAPM, _aka_ King model) yield the current (I), voltage (V), and power (P) at a single or discrete set of points. PVWatts only yields the performance at the max power point (MPP) of the module, whereas the SAPM also yields the short circuit current (Isc), open circuit voltage (Voc).\n",
-    "\n",
-    "Continuous IV curve models like the CEC, PVsyst, and DeSoto models yield a relation between current and voltage called an IV curve, and therefore yield a continuous set of (I, V) points spanning from Isc to Voc and beyond. The domain of the IV curve in in quadrants 1, 2, and 4 where voltage is on the horizontal and current is on the vertical axis.\n",
-    "\n",
-    "[![IV curve](https://www.pveducation.org/sites/default/files/PVCDROM/Modules/Images/NONIDEAL.gif)](https://www.pveducation.org/pvcdrom/modules-and-arrays/mismatch-effects)\n",
-    "\n",
-    "Attribution: [PV Education, UNSW, ASU, _et al._](https://www.pveducation.org/pvcdrom/modules-and-arrays/mismatch-effects)\n",
-    "\n",
-    "The IV curve relationship is based on an electrical analog called the single diode model which is defined by 5 parameters: the light current (IL), shunt resistance (Rsh), series resistance (Rs), diode saturation current (Isat), and the diode ideality factor (&gamma;).\n",
-    "\n",
-    "[![single diode model](https://pvpmc.sandia.gov/wp-content/uploads/2012/04/Single-Diode-EC2.png)](https://pvpmc.sandia.gov/modeling-steps/2-dc-module-iv/diode-equivalent-circuit-models/)\n",
-    "\n",
-    "Attribution: [Sandia NL PV Performance Modeling Collaborative](https://pvpmc.sandia.gov/modeling-steps/2-dc-module-iv/diode-equivalent-circuit-models/)\n",
-    "\n",
-    "## CEC Model (_aka_ SAM or 6-parameter model)\n",
-    "The California Energy Commision (CEC) contracted authorized testing labs to measure at STC the nameplate power (Pmp), Isc, Voc, and the MPP voltage and current (Vmp, Imp), as well as Isc and Voc temperature coefficients, the module dimensions, the number of series cells (Ns), parallel substrings (Np), cell area in cm&sup2; (Ac), and more. Tables of the CEC module parameters are available from the [Solar Equipment Lists](https://www.energy.ca.gov/programs-and-topics/programs/solar-equipment-lists). These measurements have been fit to the SDM by the NREL System Advisor Model (SAM) and stored in a CSV file that is bundled with SAM. You can access the [SAM library on GitHub](https://github.com/NREL/SAM/tree/develop/deploy/libraries). This SAM library of module coefficients derived from the CEC measurements are collectively called CEC modules and the SAM model that uses the derived SDM coefficients is called the CEC model. The CEC model used in SAM is sometimes also called the 6-parameter model because of the `Adjust` additional parameter which differentiates it from the DeSoto model.\n",
-    "\n",
-    "### pvlib python\n",
-    "There are several functions we can use in pvlib python:\n",
-    "\n",
-    "* [`pvlib.pvsystem.retrieve_sam()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.pvsystem.retrieve_sam.html#pvlib.pvsystem.retrieve_sam)\n",
-    "* [`pvlib.pvsystem.calcparam_cec()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.pvsystem.calcparams_cec.html)\n",
-    "* [`pvlib.pvsystem.singlediode()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.pvsystem.singlediode.html)\n",
-    "* [`pvlib.ivtools.sdm.fit_cec_sam()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.ivtools.sdm.fit_cec_sam.html)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                              Technology Bifacial     STC    PTC    A_c  \\\n",
-       "Canadian_Solar_Inc__CS5C_80M   Mono-c-Si        0   80.15   72.7  0.664   \n",
-       "Canadian_Solar_Inc__CS5C_90M   Mono-c-Si        0   89.82   82.0  0.664   \n",
-       "Canadian_Solar_Inc__CS5T_130M  Mono-c-Si        0  129.94  113.3  1.549   \n",
-       "Canadian_Solar_Inc__CS5T_135M  Mono-c-Si        0  134.78  117.8  1.549   \n",
-       "Canadian_Solar_Inc__CS5T_140M  Mono-c-Si        0  139.83  122.2  1.549   \n",
-       "\n",
-       "                              Length  Width N_s I_sc_ref V_oc_ref  ...  \\\n",
-       "Canadian_Solar_Inc__CS5C_80M   1.213  0.547  36     4.97     21.8  ...   \n",
-       "Canadian_Solar_Inc__CS5C_90M   1.213  0.547  36      5.4     22.2  ...   \n",
-       "Canadian_Solar_Inc__CS5T_130M  1.615  0.959  60     4.82     36.3  ...   \n",
-       "Canadian_Solar_Inc__CS5T_135M  1.615  0.959  60     4.95     36.6  ...   \n",
-       "Canadian_Solar_Inc__CS5T_140M  1.615  0.959  60     5.08     36.8  ...   \n",
-       "\n",
-       "                                  a_ref   I_L_ref I_o_ref       R_s  \\\n",
-       "Canadian_Solar_Inc__CS5C_80M   0.976234  4.980938     0.0  0.326085   \n",
-       "Canadian_Solar_Inc__CS5C_90M   0.998612  5.409365     0.0  0.263006   \n",
-       "Canadian_Solar_Inc__CS5T_130M  1.549582  4.831287     0.0  0.578812   \n",
-       "Canadian_Solar_Inc__CS5T_135M  1.551694  4.958797     0.0  0.605825   \n",
-       "Canadian_Solar_Inc__CS5T_140M  1.557688  5.086822     0.0  0.583927   \n",
-       "\n",
-       "                                 R_sh_ref     Adjust gamma_r BIPV  \\\n",
-       "Canadian_Solar_Inc__CS5C_80M   148.161652  10.454623  -0.476    N   \n",
-       "Canadian_Solar_Inc__CS5C_90M   151.660019  11.377936  -0.476    N   \n",
-       "Canadian_Solar_Inc__CS5T_130M  247.168396   3.804579 -0.4678    N   \n",
-       "Canadian_Solar_Inc__CS5T_135M   340.86554   2.506149 -0.4678    N   \n",
-       "Canadian_Solar_Inc__CS5T_140M    434.8573   2.220928 -0.4678    N   \n",
-       "\n",
-       "                                         Version      Date  \n",
-       "Canadian_Solar_Inc__CS5C_80M   SAM 2018.11.11 r2  1/3/2019  \n",
-       "Canadian_Solar_Inc__CS5C_90M   SAM 2018.11.11 r2  1/3/2019  \n",
-       "Canadian_Solar_Inc__CS5T_130M  SAM 2018.11.11 r2  1/3/2019  \n",
-       "Canadian_Solar_Inc__CS5T_135M  SAM 2018.11.11 r2  1/3/2019  \n",
-       "Canadian_Solar_Inc__CS5T_140M  SAM 2018.11.11 r2  1/3/2019  \n",
-       "\n",
-       "[5 rows x 25 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Technology</th>\n      <th>Bifacial</th>\n      <th>STC</th>\n      <th>PTC</th>\n      <th>A_c</th>\n      <th>Length</th>\n      <th>Width</th>\n      <th>N_s</th>\n      <th>I_sc_ref</th>\n      <th>V_oc_ref</th>\n      <th>...</th>\n      <th>a_ref</th>\n      <th>I_L_ref</th>\n      <th>I_o_ref</th>\n      <th>R_s</th>\n      <th>R_sh_ref</th>\n      <th>Adjust</th>\n      <th>gamma_r</th>\n      <th>BIPV</th>\n      <th>Version</th>\n      <th>Date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Canadian_Solar_Inc__CS5C_80M</th>\n      <td>Mono-c-Si</td>\n      <td>0</td>\n      <td>80.15</td>\n      <td>72.7</td>\n      <td>0.664</td>\n      <td>1.213</td>\n      <td>0.547</td>\n      <td>36</td>\n      <td>4.97</td>\n      <td>21.8</td>\n      <td>...</td>\n      <td>0.976234</td>\n      <td>4.980938</td>\n      <td>0.0</td>\n      <td>0.326085</td>\n      <td>148.161652</td>\n      <td>10.454623</td>\n      <td>-0.476</td>\n      <td>N</td>\n      <td>SAM 2018.11.11 r2</td>\n      <td>1/3/2019</td>\n    </tr>\n    <tr>\n      <th>Canadian_Solar_Inc__CS5C_90M</th>\n      <td>Mono-c-Si</td>\n      <td>0</td>\n      <td>89.82</td>\n      <td>82.0</td>\n      <td>0.664</td>\n      <td>1.213</td>\n      <td>0.547</td>\n      <td>36</td>\n      <td>5.4</td>\n      <td>22.2</td>\n      <td>...</td>\n      <td>0.998612</td>\n      <td>5.409365</td>\n      <td>0.0</td>\n      <td>0.263006</td>\n      <td>151.660019</td>\n      <td>11.377936</td>\n      <td>-0.476</td>\n      <td>N</td>\n      <td>SAM 2018.11.11 r2</td>\n      <td>1/3/2019</td>\n    </tr>\n    <tr>\n      <th>Canadian_Solar_Inc__CS5T_130M</th>\n      <td>Mono-c-Si</td>\n      <td>0</td>\n      <td>129.94</td>\n      <td>113.3</td>\n      <td>1.549</td>\n      <td>1.615</td>\n      <td>0.959</td>\n      <td>60</td>\n      <td>4.82</td>\n      <td>36.3</td>\n      <td>...</td>\n      <td>1.549582</td>\n      <td>4.831287</td>\n      <td>0.0</td>\n      <td>0.578812</td>\n      <td>247.168396</td>\n      <td>3.804579</td>\n      <td>-0.4678</td>\n      <td>N</td>\n      <td>SAM 2018.11.11 r2</td>\n      <td>1/3/2019</td>\n    </tr>\n    <tr>\n      <th>Canadian_Solar_Inc__CS5T_135M</th>\n      <td>Mono-c-Si</td>\n      <td>0</td>\n      <td>134.78</td>\n      <td>117.8</td>\n      <td>1.549</td>\n      <td>1.615</td>\n      <td>0.959</td>\n      <td>60</td>\n      <td>4.95</td>\n      <td>36.6</td>\n      <td>...</td>\n      <td>1.551694</td>\n      <td>4.958797</td>\n      <td>0.0</td>\n      <td>0.605825</td>\n      <td>340.86554</td>\n      <td>2.506149</td>\n      <td>-0.4678</td>\n      <td>N</td>\n      <td>SAM 2018.11.11 r2</td>\n      <td>1/3/2019</td>\n    </tr>\n    <tr>\n      <th>Canadian_Solar_Inc__CS5T_140M</th>\n      <td>Mono-c-Si</td>\n      <td>0</td>\n      <td>139.83</td>\n      <td>122.2</td>\n      <td>1.549</td>\n      <td>1.615</td>\n      <td>0.959</td>\n      <td>60</td>\n      <td>5.08</td>\n      <td>36.8</td>\n      <td>...</td>\n      <td>1.557688</td>\n      <td>5.086822</td>\n      <td>0.0</td>\n      <td>0.583927</td>\n      <td>434.8573</td>\n      <td>2.220928</td>\n      <td>-0.4678</td>\n      <td>N</td>\n      <td>SAM 2018.11.11 r2</td>\n      <td>1/3/2019</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 25 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
-   "source": [
-    "# here's a trick, transpose the database, and search the index using\n",
-    "# strings\n",
-    "CECMODS.T[CECMODS.T.index.str.startswith('Canadian_Solar') & CECMODS.T.index.str.contains('220M')]\n",
-    "#                               Technology Bifacial      STC    PTC  ... gamma_r BIPV            Version      Date\n",
-    "# Canadian_Solar_Inc__CS5P_220M  Mono-c-Si        0  219.961  200.1  ...  -0.476    N  SAM 2018.11.11 r2  1/3/2019\n",
-    "# Canadian_Solar_Inc__CS6P_220M  Mono-c-Si        0  219.775  198.5  ...  -0.436    N  SAM 2018.11.11 r2  1/3/2019\n",
-    "\n",
-    "# that was almost too easy, let's use the 300-W Canadian Solar mono-Si PV module\n",
-    "# CECMOD_MONO = CECMODS['Canadian_Solar_Inc__CS6X_300M']\n",
-    "# CECMOD_MONO\n",
-    "CECMODS.T[CECMODS.T.index.str.startswith('Canadian_Solar')].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Technology            Mono-c-Si\n",
-       "Bifacial                      0\n",
-       "STC                      300.03\n",
-       "PTC                       273.6\n",
-       "A_c                       1.852\n",
-       "Length                    1.931\n",
-       "Width                     0.959\n",
-       "N_s                          72\n",
-       "I_sc_ref                   8.74\n",
-       "V_oc_ref                   45.0\n",
-       "I_mp_ref                   8.22\n",
-       "V_mp_ref                   36.5\n",
-       "alpha_sc               0.004326\n",
-       "beta_oc                -0.15372\n",
-       "T_NOCT                     44.3\n",
-       "a_ref                  1.861184\n",
-       "I_L_ref                8.745869\n",
-       "I_o_ref                     0.0\n",
-       "R_s                    0.366101\n",
-       "R_sh_ref             545.178589\n",
-       "Adjust                 4.722239\n",
-       "gamma_r                  -0.442\n",
-       "BIPV                          N\n",
-       "Version       SAM 2018.11.11 r2\n",
-       "Date                   1/3/2019\n",
-       "Name: Canadian_Solar_Inc__CS6X_300M, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
-   "source": [
     "# pvlib python can retrieve CEC module and inverter parameters from the\n",
     "# SAM libraries\n",
     "CECMODS = pvlib.pvsystem.retrieve_sam('CECMod')\n",
+    "INVERTERS = pvlib.pvsystem.retrieve_sam('CECInverter')\n",
     "\n",
     "# It can be tricky to find the modules you want so you can visit their\n",
     "# GitHub page to search the CSV files manually, or use pvfree\n",
@@ -210,8 +54,34 @@
     "# https://pvfree.herokuapp.com/pvinverters/\n",
     "# NOTE: whitespace, hyphens, dashes, etc. are replaced by underscores\n",
     "# These are some basic 300-W Canadian Solar poly and mono Si modules\n",
-    "CECMOD_MONO = CECMODS['Canadian_Solar_Inc__CS6X_300M']\n",
-    "CECMOD_MONO"
+    "CECMOD_POLY = CECMODS['Canadian_Solar_Inc__CS6X_300P']\n",
+    "CECMOD_MONO = CECMODS['Canadian_Solar_Inc__CS6X_300M']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# here's a trick, transpose the database, and search the index using\n",
+    "# strings\n",
+    "INVERTERS.T[INVERTERS.T.index.str.startswith('SMA_America__STP')]\n",
+    "#                                       Vac         Pso     Paco  ... Mppt_high    CEC_Date             CEC_Type\n",
+    "# SMA_America__STP_33_US_41__480V_      480  126.152641  33300.0  ...     800.0         NaN  Utility Interactive\n",
+    "# SMA_America__STP_50_US_41__480V_      480  111.328354  50010.0  ...     800.0    1/2/2019  Utility Interactive\n",
+    "# SMA_America__STP_60_US_10__400V_      400   97.213982  59860.0  ...     800.0         NaN  Utility Interactive\n",
+    "# SMA_America__STP_60_US_10__480V_      480  116.969749  60000.0  ...     800.0         NaN  Utility Interactive\n",
+    "# SMA_America__STP_62_US_41__480V_      480  133.166687  62500.0  ...     800.0         NaN  Utility Interactive\n",
+    "# SMA_America__STP12000TL_US_10__480V_  480   56.013401  12000.0  ...     800.0  10/15/2018  Utility Interactive\n",
+    "# SMA_America__STP15000TL_US_10__480V_  480   52.128044  15000.0  ...     800.0  10/15/2018  Utility Interactive\n",
+    "# SMA_America__STP20000TL_US_10__480V_  480   46.517708  20000.0  ...     800.0  10/15/2018  Utility Interactive\n",
+    "# SMA_America__STP24000TL_US_10__480V_  480   46.893803  24060.0  ...     800.0  10/15/2018  Utility Interactive\n",
+    "# SMA_America__STP30000TL_US_10__480V_  480    62.93433  30010.0  ...     800.0  10/15/2018  Utility Interactive\n",
+    "# SMA_America__STP50_US_40__480V_       480  125.080681  50072.0  ...     800.0  10/15/2018  Utility Interactive\n",
+    "\n",
+    "# that was almost too easy, let's use the 60-kW Sunny TriPower, it's a good inverter.\n",
+    "INVERTER_60K = INVERTERS['SMA_America__STP_60_US_10__480V_']"
    ]
   },
   {
@@ -321,7 +191,7 @@
     "        CECMOD_MONO.alpha_sc, CECMOD_MONO.a_ref,\n",
     "        CECMOD_MONO.I_L_ref, CECMOD_MONO.I_o_ref,\n",
     "        CECMOD_MONO.R_sh_ref, CECMOD_MONO.R_s, CECMOD_MONO.Adjust)\n",
-    "mpp = pvlib.pvsystem.singlediode(*cecparams, ivcurve_pnts=1001, method='newton')\n",
+    "mpp = pvlib.pvsystem.max_power_point(*cecparams, method='newton')\n",
     "mpp = pd.DataFrame(mpp, index=TIMES)\n",
     "Edaily = mpp.p_mp.resample('D').sum()"
    ]
