Update Tutorial 4 - Model a Module's Performance.ipynb
typo: spectrum, aoi normal at zero

Co-authored-by: Kevin Anderson <57452607+kanderso-nrel@users.noreply.github.com>

--- a/Tutorial 4 - Model a Module's Performance.ipynb
+++ b/Tutorial 4 - Model a Module's Performance.ipynb
@@ -17,8 +17,8 @@
     "The most basic condition is called standard testing conditions or STC, which is considered the reference for most PV modules. For example, all of the PV modules in the SAM CEC module database list their nameplate power at STC.\n",
     "* irradiance: 1000-W/m&sup2;\n",
     "* cell temperature: 25&deg;C\n",
-    "* angle of incidence (AOI): 90&deg;\n",
-    "* sepctrum: AM1.5g (ASTM G-173)\n",
+    "* angle of incidence (AOI): 0&deg;\n",
+    "* spectrum: AM1.5g (ASTM G-173)\n",
     "\n",
     "### Air mass (AM)\n",
     "The standard refernce AM1.5g (ASTM G-173) is defined as the solar spectrum of global irradiance that passes through 1.5 atmospheres. For more information see [NREL Solar Spectra](https://www.nrel.gov/grid/solar-resource/spectra.html).\n",
