Update Tutorial 4 - Model a Module's Performance.ipynb
aoi normal at zero, extra equalsign

Co-authored-by: Kevin Anderson <57452607+kanderso-nrel@users.noreply.github.com>

--- a/Tutorial 4 - Model a Module's Performance.ipynb
+++ b/Tutorial 4 - Model a Module's Performance.ipynb
@@ -27,7 +27,7 @@
     "Another common set of test conditions is the IEC 61853 standard which provides a grid of temperatures for module testing that covers the expected range of inicident irradiance and cell temperatures for PV modules assuming that the irradiance is normal and the solar spectrum is similar to AM1.5g.\n",
     "* irradiance (W/m&sup2;): 100, 200, 400, 600, 800, 1000, 1100\n",
     "* module temperature (&deg;C): 15, 25, 50, 75\n",
-    "* angle of incidence =: 90&deg;\n",
+    "* angle of incidence: 0&deg;\n",
     "* spectrum: AM1.5g (ASTM G-173)\n",
     "\n",
     "Certain combinations are excluded because they're unlikely: (1100-W/m&sup2, 15&deg;C), (400-W/m&sup2, 75&deg;C), (200-W/m&sup2, 50&deg;C), (200-W/m&sup2, 75&deg;C), (100-W/m&sup2, 50&deg;C), and (100-W/m&sup2, 75&deg;C)"
