Update Tutorial 4 - Model a Module's Performance.ipynb
`sed s/in/is/g`

Co-authored-by: Kevin Anderson <57452607+kanderso-nrel@users.noreply.github.com>

--- a/Tutorial 4 - Model a Module's Performance.ipynb
+++ b/Tutorial 4 - Model a Module's Performance.ipynb
@@ -67,7 +67,7 @@
     "# Single Diode Model (SDM) & IV Curve\n",
     "PV module performance can be modeled using point or continuous IV-curve models. Point models like PVWatts and The Sandia Array Performance Model (SAPM, _aka_ King model) yield the current (I), voltage (V), and power (P) at a single or discrete set of points. PVWatts only yields the performance at the max power point (MPP) of the module, whereas the SAPM also yields the short circuit current (Isc), open circuit voltage (Voc).\n",
     "\n",
-    "Continuous IV curve models like the CEC, PVsyst, and DeSoto models yield a relation between current and voltage called an IV curve, and therefore yield a continuous set of (I, V) points spanning from Isc to Voc and beyond. The domain of the IV curve in in quadrants 1, 2, and 4 where voltage is on the horizontal and current is on the vertical axis.\n",
+    "Continuous IV curve models like the CEC, PVsyst, and DeSoto models yield a relation between current and voltage called an IV curve, and therefore yield a continuous set of (I, V) points spanning from Isc to Voc and beyond. The domain of the IV curve is in quadrants 1, 2, and 4 where voltage is on the horizontal and current is on the vertical axis.\n",
     "\n",
     "[![IV curve](https://www.pveducation.org/sites/default/files/PVCDROM/Modules/Images/NONIDEAL.gif)](https://www.pveducation.org/pvcdrom/modules-and-arrays/mismatch-effects)\n",
     "\n",
