Update Tutorial 4 - Model a Module's Performance.ipynb
`calcparams_cec()` with an "s"

Co-authored-by: Kevin Anderson <57452607+kanderso-nrel@users.noreply.github.com>

--- a/Tutorial 4 - Model a Module's Performance.ipynb
+++ b/Tutorial 4 - Model a Module's Performance.ipynb
@@ -86,7 +86,7 @@
     "There are several functions we can use in pvlib python:\n",
     "\n",
     "* [`pvlib.pvsystem.retrieve_sam()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.pvsystem.retrieve_sam.html#pvlib.pvsystem.retrieve_sam)\n",
-    "* [`pvlib.pvsystem.calcparam_cec()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.pvsystem.calcparams_cec.html)\n",
+    "* [`pvlib.pvsystem.calcparams_cec()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.pvsystem.calcparams_cec.html)\n",
     "* [`pvlib.pvsystem.singlediode()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.pvsystem.singlediode.html)\n",
     "* [`pvlib.ivtools.sdm.fit_cec_sam()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.ivtools.sdm.fit_cec_sam.html)"
    ],
