Update Tutorial 4 - Model a Module's Performance.ipynb
ditto

Co-authored-by: Kevin Anderson <57452607+kanderso-nrel@users.noreply.github.com>

--- a/Tutorial 4 - Model a Module's Performance.ipynb
+++ b/Tutorial 4 - Model a Module's Performance.ipynb
@@ -434,7 +434,7 @@
   {
    "source": [
     "## Calculate CEC Parameters\n",
-    "The module parameters are given at the reference condition. Use [`pvlib.pvsystem.calcparam_cec()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.pvsystem.calcparams_cec.html) to generate the 5 SDM parameters that can be used in with [`pvlib.pvsystem.singlediode()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.pvsystem.singlediode.html) to calculate the IV curve information.\n",
+    "The module parameters are given at the reference condition. Use [`pvlib.pvsystem.calcparams_cec()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.pvsystem.calcparams_cec.html) to generate the 5 SDM parameters that can be used in with [`pvlib.pvsystem.singlediode()`](https://pvlib-python.readthedocs.io/en/latest/generated/pvlib.pvsystem.singlediode.html) to calculate the IV curve information.\n",
     "\n",
     "### `nNsVth`, what's this?\n",
     "The diode ideality factor (n) is combined with the number of cells (Ns) and the thermal voltage (Vth) to create a convenience parameter. This is [syntactic sugar](https://en.wikipedia.org/wiki/Syntactic_sugar)."
