--- a/_sources/Tutorial 0 - Overview.ipynb
+++ b/_sources/Tutorial 0 - Overview.ipynb
@@ -499,14 +499,20 @@
     "\n",
     "Check out the pvlib python [examples gallery](https://pvlib-python.readthedocs.io/en/stable/auto_examples/index.html).\n",
     "Start with [Sun path diagram](https://pvlib-python.readthedocs.io/en/stable/auto_examples/plot_sunpath_diagrams.html),\n",
-    "then feel free to explore the rest of the notebooks.\n"
+    "then feel free to explore the rest of the notebooks.\n",
+    "\n",
+    "### Open PV Tools\n",
+    "\n",
+    "There is a curated list of [open source PV tools](https://openpvtools.readthedocs.io/) from [\"Review of Open Source Tools for PV Modeling\" by Will Holmgren, _et al._ at IEEE 7th World Conference on PV Energy Conversion 2018](http://dx.doi.org/10.1109/PVSC.2018.8548231)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/88x31.png\" /></a><br />This work is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Creative Commons Attribution 4.0 International License</a>."
+    "[![Creative Commons License](https://i.creativecommons.org/l/by/4.0/88x31.png)](http://creativecommons.org/licenses/by/4.0/)\n",
+    "\n",
+    "This work is licensed under a [Creative Commons Attribution 4.0 International License](http://creativecommons.org/licenses/by/4.0/)."
    ]
   }
  ],
@@ -526,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
