--- a/_sources/Tutorial 4 - Model a Module's Performance.ipynb
+++ b/_sources/Tutorial 4 - Model a Module's Performance.ipynb
@@ -166,7 +166,7 @@
     "\n",
     "Continuous IV curve models like the CEC, PVsyst, and DeSoto models yield a relation between current and voltage called an IV curve, and therefore yield a continuous set of (V, I) points spanning from Isc to Voc and beyond. The domain of the IV curve is in quadrants 1, 2, and 4 where voltage is on the horizontal and current is on the vertical axis. The figure below from [PV Education PVCDROM](https://www.pveducation.org/pvcdrom/welcome-to-pvcdrom) shows an IV curve of an \"ideal\" cell.\n",
     "\n",
-    "[![IV curve](https://www.pveducation.org/sites/default/files/PVCDROM/Modules/Images/NONIDEAL.gif)](https://www.pveducation.org/pvcdrom/modules-and-arrays/mismatch-effects)\n",
+    "[![IV curve](images/t4_PVEducation_IVCurve.PNG)](https://www.pveducation.org/pvcdrom/modules-and-arrays/mismatch-effects)\n",
     "\n",
     "Attribution: [PV Education, UNSW, ASU, _et al._](https://www.pveducation.org/pvcdrom/modules-and-arrays/mismatch-effects)"
    ]
@@ -885,7 +885,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/88x31.png\" /></a><br />This work is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Creative Commons Attribution 4.0 International License</a>."
+    "[![Creative Commons License](https://i.creativecommons.org/l/by/4.0/88x31.png)](http://creativecommons.org/licenses/by/4.0/)\n",
+    "\n",
+    "This work is licensed under a [Creative Commons Attribution 4.0 International License](http://creativecommons.org/licenses/by/4.0/)."
    ]
   }
  ],
